--- a/schedule_horuk.html
+++ b/schedule_horuk.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
