--- a/page3.html
+++ b/page3.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
 
     
 
@@ -81,7 +81,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4KRIEgDf6DZyp0jVH0LjTkaXinuIjdKUOaQtOKtT/7skay+Q1viYgM+UZxd8BEJ7AUiCh5m4GdEYWnlftkwnqolAZaukvysIVWTzu1zeCJpUr9Y5zOK1R7mbADvzh1ml">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YvXGxp8nRhQjmz4ApAnsHWDRNT6c7Cef7MGpzIXf5xSSa/8iBBkJslsqBZhC2POC5L6OyYEQdqjbPBZxmsMjftEf1zkjakHOt8P1NuZ1LLzWiSaSTethKwu5D/WtNCmk">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Авторизація успішна</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
