--- a/autorisation_change.html
+++ b/autorisation_change.html
@@ -44,27 +44,24 @@
                          <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="horuk_rozklad_site.html#form1-2">Програма для швидкої побудови розкладу занять</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="page3.html#form1-c">Програма для швидкої побудови розкладу занять</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Попробуйте прямо сейчас!
-                </a></div>
+            
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section form1 cid-rZsFmVyWcS" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section form1 cid-rZsFmVyWcS" id="form1-j">
 
     
 
@@ -81,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kojdNGvKW0M0mtCsu03wy8Cq0es6+hq14VwgSy1My68E1yW7vZ0SHkDPYtgjTQ8VzVOTYXbSBIj68yyxcumUcs54gT8iHo4+uGTWFe2fT+Se/pnsbdxcUYdwl5LYiZIU">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BCJJNJCEg8a+DfpKxrGBnzSySEtXTuUlgDmKK9wOZiEzTAGiNtd0TFfV4kJ85c02lnU+8xhWH4bLQKqGss3JAzhlw1ktJbRqyLlQL8Rhs+x/bSs+twAjzDTpn2hDpQKA">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение анкеты!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
