--- a/page3.html
+++ b/page3.html
@@ -44,27 +44,24 @@
                          <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="horuk_rozklad_site.html#form1-2">Програма для швидкої побудови розкладу занять</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="page3.html#form1-c">Програма для швидкої побудови розкладу занять</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Попробуйте прямо сейчас!
-                </a></div>
+            
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
 
     
 
@@ -81,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YvXGxp8nRhQjmz4ApAnsHWDRNT6c7Cef7MGpzIXf5xSSa/8iBBkJslsqBZhC2POC5L6OyYEQdqjbPBZxmsMjftEf1zkjakHOt8P1NuZ1LLzWiSaSTethKwu5D/WtNCmk">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IHnpK1XWsBD6NmbnDCC9xdKbGUO83L8YKJ7ngZDwxn9IUfQ4+wtbxq4I1hTzGLbQz5pW11o/R0ycIZhcQ50MkreTeD3ZpDF/Miei0ZqsNhxxr6tsWIO3rblOnkH8Y9T1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Авторизація успішна</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
