--- a/improve_site.html
+++ b/improve_site.html
@@ -41,27 +41,30 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.co">
-                         <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 5rem;">
+                         <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="page3.html#form1-c">Програма для швидкої побудови розкладу занять</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="horuk_rozklad_site.html#header2-l">Програма для швидкої побудови розкладу занять</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
                         </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
+                    Попробуйте прямо сейчас!
+                </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-n">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-n">
 
     
 
@@ -92,7 +95,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T2qqX6VyS+Fmv6BZ+UNivF6LYBT2cO0CaXJCZwKnxrsOyokbB/NftIq6TafwGnFsDsb78JzTPagjoZJWVvzgADXsnrq2xwSJqCAlvB8YsiJevSVf2ttMH0GedgLI+2/P">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GxU6IGTAapC1PDennqc+q+eYNGLaLcrSWIByNNk7gpWja0ZAGCaSkYbUs7rJJdwnBNjzXyO6rZIZuXXQ0AZ7Iti52XGM2MLquw8LWdkNAsAPYSv4mJmlZy2QfUmpW8HU">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Дякуємо!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
