create github pages

--- a/horuk_rozklad_site.html
+++ b/horuk_rozklad_site.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
 
     
 
