--- a/schedule_horuk.html
+++ b/schedule_horuk.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -73,7 +73,7 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"></h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Розклад занять</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page3.html#form1-c">Студентам</a>
