--- a/autorisation_change.html
+++ b/autorisation_change.html
@@ -11,7 +11,6 @@
   
   
   <title>Покращена авторизація для зміни розкладу</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -40,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="horuk_rozklad_site.html#header2-l">
                          <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -49,22 +48,19 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Попробуйте прямо сейчас!
-                </a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="horuk_rozklad_site.html#header2-l">Home</a> <a class="btn btn-sm btn-primary display-4" href="improve_site.html#header15-o">Внесення пропозицій</a> <a class="btn btn-sm btn-primary display-4" href="schedule_horuk.html#header2-6">До розкладу занять</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section class="mbr-section form1 cid-rZsFmVyWcS" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section form1 cid-rZsFmVyWcS" id="form1-j">
 
     
 
@@ -81,7 +77,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0Ke/Cqes2AZFohb6aMzDDS6BR9coThTJlH12Wc1OB1smddGWup2YQy48H5e9NEqvPJR0rqnG+3XrctgFhF6Cd6DHbcCwKlVyiTR8nkeZpH6l/Rtv+FRfYEcDQltCYSBJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g5aCfdxoE73InT8y1t1AAv2bRySkxD2d8N6zytoGcVks+b49at+13ji7mNN7dbH1C88MTgc1CBV+9sPQF0yjugCoHISnu9+QUVs6HJ25j+fABOXcjsgvp6IP1YEf7sdq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение анкеты!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
