--- a/improve_site.html
+++ b/improve_site.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="horuk_rozklad_site.html#header2-l">
                          <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -49,22 +49,19 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Попробуйте прямо сейчас!
-                </a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="horuk_rozklad_site.html#header2-l">Home</a> <a class="btn btn-sm btn-primary display-4" href="improve_site.html#header15-o">Внесення пропозицій</a> <a class="btn btn-sm btn-primary display-4" href="schedule_horuk.html#header2-6">До розкладу занять</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-n">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-n">
 
     
 
@@ -95,7 +92,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EZllT/XH0yXB2tYyvoeHxkO0Z3wdHaWMvq6tk8gvpwGBcY5YZmiyIK0hVOuG3yA0aThPXe4lHYg+stuZWJSdrDQMLXyC4ebDqryIct2CszOHLLdPuxRemu9H6T7aCo4b">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ybvajme/6m+AW7j0I609LqRF81Ofc1pgqbVfb2+O+enf7YHXalxDoV+lqVgpa/NHir2j6KfWyfFIFq6HqYulaxFXfCZNzY6ZRuIIews7S4KDE+JfJHgchM+fFYVVe6Id">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Дякуємо!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
