--- a/schedule_horuk.html
+++ b/schedule_horuk.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="horuk_rozklad_site.html#header2-l">
                          <img src="assets/images/mbr.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -49,22 +49,19 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-mobile mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.co">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Попробуйте прямо сейчас!
-                </a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="horuk_rozklad_site.html#header2-l">Home</a> <a class="btn btn-sm btn-primary display-4" href="improve_site.html#header15-o">Внесення пропозицій</a> <a class="btn btn-sm btn-primary display-4" href="schedule_horuk.html#header2-6">До розкладу занять</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
