--- a/student.html
+++ b/student.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-q">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-q">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть факультет, на якому навчаєтесь</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://mobirise.co">Факультет 1</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Факультет 2</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Факультет 3</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Факультет 4</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Факультет 5</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Факультет 6</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page6.html#info1-z">Факультет 1</a> <a class="btn btn-primary display-4" href="page7.html#info1-12">Факультет 2</a> <a class="btn btn-primary display-4" href="page8.html#info1-15">Факультет 3</a> <a class="btn btn-primary display-4" href="page9.html#info1-1b">Факультет 4</a> <a class="btn btn-primary display-4" href="page10.html#info1-1e">Факультет 5</a> <a class="btn btn-primary display-4" href="page11.html#info1-1h">Факультет 6</a></div>
             </div>
         </div>
     </div>
