--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-w">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-w">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть Вашу спеціальність</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://mobirise.co">Спеціальність 1</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Спеціальність 2</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Спеціальність 3</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Спеціальність 4</a> <a class="btn btn-primary display-4" href="https://mobirise.co">Спеціальність 5</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page12.html#info1-1k">Спеціальність 1</a> <a class="btn btn-primary display-4" href="page13.html#info1-1n">Спеціальність 2</a> <a class="btn btn-primary display-4" href="page14.html#info1-1q">Спеціальність 3</a> <a class="btn btn-primary display-4" href="page15.html#info1-1t">Спеціальність 4</a> <a class="btn btn-primary display-4" href="page16.html#info1-1w">Спеціальність 5</a></div>
             </div>
         </div>
     </div>
