create github pages

--- a/horuk_rozklad_site.html
+++ b/horuk_rozklad_site.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
 
     
 
