--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-w">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-w">
 
     
 
