--- a/page10.html
+++ b/page10.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section once="footers" class="cid-rZtcEnBRKk" id="footer6-1d">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section once="footers" class="cid-rZtcEnBRKk" id="footer6-1d">
 
     
 
