--- a/autorisation_change.html
+++ b/autorisation_change.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section form1 cid-rZsFmVyWcS" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section form1 cid-rZsFmVyWcS" id="form1-j">
 
     
 
@@ -77,24 +77,24 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E35X4JRBmdqt/FB5SnVcH9tUmKzP4XFcIZVwXUIlzCeEtX6/bnkRjSibn8nlKhVu5WFxDUEa4xhv8PdushHfHamM0gC/mcMWVTWZT2+4RG9u9g9fBo4iAiQJirOYmhro">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ceA/05C8hCO9SwTPTGUbH5Jw6IuvmAgVqadwa2zBCrwK8neZFYJMGWzKbs34NvXnmzkxNOXXwpU3GVvnm1ND9KBBtMMfFMBdZKQpPhFGCM2bGNwZysS7wdHBJAyToCoN">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заполнение анкеты!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Авторизація успішна</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                         </div>
                     </div>
                     <div class="dragArea row">
                         <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-j" class="form-control-label mbr-fonts-style display-7">Номер коду доступу</label>
-                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-j">
+                            <label for="name-form1-j" class="form-control-label mbr-fonts-style display-7">Номер коду доступу; Пароль</label>
+                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" placeholder="0123456; password" id="name-form1-j">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-j" class="form-control-label mbr-fonts-style display-7">Пароль</label>
-                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-j">
+                            <label for="email-form1-j" class="form-control-label mbr-fonts-style display-7">Email</label>
+                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" placeholder="name@ukr.net" id="email-form1-j">
                         </div>
                         <div data-for="phone" class="col-md-4  form-group">
                             <label for="phone-form1-j" class="form-control-label mbr-fonts-style display-7">Прізвище ім'я по батькові</label>
-                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-j">
+                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" placeholder="0981234567" id="phone-form1-j">
                         </div>
                         
                         <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4">Надіслати</button></div>
