--- a/horuk_rozklad_site.html
+++ b/horuk_rozklad_site.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
 
     
 
