--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
 
     
 
@@ -77,7 +77,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i0JKQ5/VI4JBduqlKrQmXhbmUwebt1u5FcAJVPkzoVAFmSBo58hwlj0kEN2QskPo8XuRJJ4W3qG6D1mydxNM7tRUtGrQdzV6TlZt/2VTnQeW4D9D+kMnoidYrXAd6RVw">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="De6OOoAht1KO4ICSFF2MrypKH7eCdenqXFwmCz2fwkpu+EQJhpWq1GmWaWkC1xHXvrGu59WHxuVJIHyoKqrf+jV4ZQ2HPD4geVrSrV5Ccyq5ACsDu6Q3x2XUpygfXYjT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Авторизація успішна</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -97,7 +97,7 @@
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" placeholder="0671234567" id="phone-form1-c">
                         </div>
                         
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="schedule_horuk.html#header2-6">Надіслати</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="tg://resolve?domain=Yulia123456qwerty">Надіслати</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
