--- a/page20.html
+++ b/page20.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section form1 cid-rZwoxdujU7" id="form1-29">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section form1 cid-rZwoxdujU7" id="form1-29">
 
     
 
@@ -77,7 +77,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xno3qYs5uIpEvgBgwKE3UIwBzlRwjT54XDwKYckNtLaukX66/9XOI2GulywfdxVFOGAggs/AE4aX2vrP2QX4QU+K6lLTRqjI8oTkTrp84uquHodc7erZKsAsMH5Ii917">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Rpxn52aAWyNp43JGWxkzqOzqTWeT4CBp8aQLf++YlFBe8lZCo/lWT/IRl1obDqgWM+aoPW/oFnfOG1xxJp0RxS/VeVmer1SLowQjA2u1SVkrOXPYobUlP75OLLVUIJD2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Авторизація успішна</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -97,7 +97,7 @@
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" placeholder="0671234567" id="phone-form1-29">
                         </div>
                         
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="page19.html#table1-27">Надіслати</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="tel:+380934601372">Надіслати</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
