--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section form1 cid-rZrFiqru0B" id="form1-c">
 
     
 
@@ -69,7 +69,7 @@
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">Для продовження роботи на сайті, будь ласка авторизуйтесь</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Введіть, будь ласка, Ваше ім'я, Email, номер телефону та&nbsp;</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Введіть, будь ласка, Ваше ім'я, Email, номер телефону&nbsp;</h3>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="De6OOoAht1KO4ICSFF2MrypKH7eCdenqXFwmCz2fwkpu+EQJhpWq1GmWaWkC1xHXvrGu59WHxuVJIHyoKqrf+jV4ZQ2HPD4geVrSrV5Ccyq5ACsDu6Q3x2XUpygfXYjT">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IorGkSdEcbFiwUd70vpbPO9wX9ljbS+TGh/hsJSuaEO9nhdOe3hnyV4L9dde99jaXmB+kWy8FJVZbaX0VcZKFRBwz1JGsRkUHI+paeQc5iJcde/+i42Xh3wbmPBzNeSB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Авторизація успішна</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
