create github pages

--- a/schedule_horuk.html
+++ b/schedule_horuk.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -73,8 +73,8 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Розклад занять</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page3.html#form1-c">Студентам</a>
-                    <a class="btn btn-md btn-success display-4" href="page20.html#form1-29">Викладачам</a>  <a class="btn btn-md btn-primary display-4" href="autorisation_change.html#form1-j">Внести зміни до розкладу</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="student.html#info1-u">Студентам</a>
+                    <a class="btn btn-md btn-success display-4" href="schedule_teacher.html#table1-27">Викладачам</a>  <a class="btn btn-md btn-primary display-4" href="autorisation_change.html#form1-j">Внести зміни до розкладу</a></div>
             </div>
         </div>
     </div>
