--- a/page12.html
+++ b/page12.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-1j">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-1j">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть свою групу</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page17.html#table1-1z">Спеціальність 1<br>Група 1<br></a> <a class="btn btn-primary display-4" href="page17.html#table1-1z">Спеціальність 1<br>Група 2<br></a> <a class="btn btn-primary display-4" href="page17.html#table1-1z">Спеціальність 1<br>Група 3<br></a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Спеціальність 1<br>Група 1<br></a> <a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Спеціальність 1<br>Група 2<br></a> <a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Спеціальність 1<br>Група 3<br></a></div>
             </div>
         </div>
     </div>
