--- a/page15.html
+++ b/page15.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rZtfTqqu13" id="footer6-1s">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rZtfTqqu13" id="footer6-1s">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть свою групу</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page17.html#table1-1z">Спеціальність 4<br>Група 1<br></a> <a class="btn btn-primary display-4" href="page17.html#table1-1z">Спеціальність 4<br>Група 2<br></a> <a class="btn btn-primary display-4" href="page17.html#table1-1z">Спеціальність 4<br>Група 3<br></a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Спеціальність 4<br>Група 1<br></a> <a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Спеціальність 4<br>Група 2<br></a> <a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Спеціальність 4<br>Група 3<br></a></div>
             </div>
         </div>
     </div>
