--- a/schedule_student.html
+++ b/schedule_student.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rZtcG6JONd" id="footer6-1y">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rZtcG6JONd" id="footer6-1y">
 
     
 
