--- a/schedule_teacher.html
+++ b/schedule_teacher.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section once="footers" class="cid-rZwmazGfiC" id="footer6-26">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section once="footers" class="cid-rZwmazGfiC" id="footer6-26">
 
     
 
