create github pages

--- a/change_page.html
+++ b/change_page.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-21">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-21">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть категорію, яка Вас цікавить</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page17.html#table1-1z">До розкладу занять студентів</a> <a class="btn btn-primary display-4" href="page19.html#table1-27">До розкладу занять викладачів</a> <a class="btn btn-primary display-4" href="https://mobirise.co">До сортування за послідовністю занять</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page17.html#table1-1z">До розкладу занять студентів</a> <a class="btn btn-primary display-4" href="page19.html#table1-27">До розкладу занять викладачів</a> <a class="btn btn-primary display-4" href="page21.html#table1-2d">До сортування за послідовністю занять</a></div>
             </div>
         </div>
     </div>
