--- a/page15.html
+++ b/page15.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rZtfTqqu13" id="footer6-1s">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section once="footers" class="cid-rZtfTqqu13" id="footer6-1s">
 
     
 
