--- a/student.html
+++ b/student.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-q">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-q">
 
     
 
