--- a/improve_site.html
+++ b/improve_site.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-n">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-n">
 
     
 
@@ -92,7 +92,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tEIv7YjKVNrjdYuo+JRMh0259aMuC3sz0fD5Vt5oI5KMkOm/2f6pUFU/PDJn5f/n85U2hRR3yK0NWKSbU/V4Y99U1dXBO+bhIxQN/FrAIe54CFL9HsZXmlSqLLr74xqt">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VVUGUEAPmxlJUe/ZDdBW6qBEZZg8b2Gx73rQ5LMKHsgDE3vh1RFKLSK6FZq1gL8eZhlDX0v/Sq7iDKYfCZaX+sTQzV0SXqgi44w1JgMOMZaTDVv3SlcM3Ds7uP90Ewc7">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Дякуємо!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
