--- a/page19.html
+++ b/page19.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rZy1InID9b" id="footer6-2f">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section once="footers" class="cid-rZy1InID9b" id="footer6-2f">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть спеціальність</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page12.html#info1-1k">Спеціальність 1</a> <a class="btn btn-primary display-4" href="page13.html#info1-1n">Спеціальність 2</a> <a class="btn btn-primary display-4" href="page14.html#info1-1q">Спеціальність 3</a> <a class="btn btn-primary display-4" href="page15.html#info1-1t">Спеціальність 4</a> <a class="btn btn-primary display-4" href="page16.html#info1-1w">Спеціальність 5</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page22.html#info1-2m">Спеціальність 1</a> <a class="btn btn-primary display-4" href="page22.html#info1-2m">Спеціальність 2</a> <a class="btn btn-primary display-4" href="page22.html#info1-2m">Спеціальність 3</a> <a class="btn btn-primary display-4" href="page22.html#info1-2m">Спеціальність 4</a> <a class="btn btn-primary display-4" href="page22.html#info1-2m">Спеціальність 5</a></div>
             </div>
         </div>
     </div>
