create github pages

--- a/change_page.html
+++ b/change_page.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-21">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-21">
 
     
 
