--- a/schedule_horuk.html
+++ b/schedule_horuk.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-rZrn2fBE8y mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -74,7 +74,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="student.html#info1-u">Студентам</a>
-                    <a class="btn btn-md btn-success display-4" href="schedule_teacher.html#table1-27">Викладачам</a>  <a class="btn btn-md btn-primary display-4" href="page20.html#info1-2j">Внести зміни до розкладу</a></div>
+                    <a class="btn btn-md btn-success display-4" href="page23.html#info1-2p">Викладачам</a>  <a class="btn btn-md btn-primary display-4" href="page20.html#info1-2j">Внести зміни до розкладу</a></div>
             </div>
         </div>
     </div>
