--- a/page7.html
+++ b/page7.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section once="footers" class="cid-rZtctGfJ4E" id="footer6-11">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rZtctGfJ4E" id="footer6-11">
 
     
 
