create github pages

--- a/page12.html
+++ b/page12.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-1j">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-1j">
 
     
 
