--- a/horuk_rozklad_site.html
+++ b/horuk_rozklad_site.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-k">
 
     
 
