--- a/page22.html
+++ b/page22.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section once="footers" class="cid-rZy2QX5BwX" id="footer6-2l">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rZy2QX5BwX" id="footer6-2l">
 
     
 
@@ -87,7 +87,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Оберіть варіант представлення розкладу</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="schedule_student.html#table1-1z">Розклад для студентів</a> <a class="btn btn-primary display-4" href="schedule_teacher.html#table1-27">Розклад для викладачів</a> <a class="btn btn-primary display-4" href="page21.html#table1-2d">Сортування розкладу за послідовністю занять</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="page20.html#info1-2j">Розклад для студентів</a> <a class="btn btn-primary display-4" href="page23.html#info1-2p">Розклад для викладачів</a> <a class="btn btn-primary display-4" href="page21.html#table1-2d">Сортування розкладу за послідовністю занять</a></div>
             </div>
         </div>
     </div>
