--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-w">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rZsGm0ERcc" id="footer6-w">
 
     
 
