create github pages

--- a/page15.html
+++ b/page15.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rZtfTqqu13" id="footer6-1s">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rZtfTqqu13" id="footer6-1s">
 
     
 
