--- a/page24.html
+++ b/page24.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rZzjgKCAR2" id="footer6-2r">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rZzjgKCAR2" id="footer6-2r">
 
     
 
