--- a/schedule_student.html
+++ b/schedule_student.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section once="footers" class="cid-rZtcG6JONd" id="footer6-1y">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section once="footers" class="cid-rZtcG6JONd" id="footer6-1y">
 
     
 
