--- a/schedule_teacher.html
+++ b/schedule_teacher.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rZwmazGfiC" id="footer6-26">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rZwmazGfiC" id="footer6-26">
 
     
 
